--- a/style.css
+++ b/style.css
@@ -1,17 +1,92 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body{
   font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+h1 {
+  margin: 0;
+  margin-top: 40px;
+  margin-bottom: 15px;
+  font-size: 27px;
+}
+
+h2 {
+  margin: 0;
+  margin-top: 40px;
+  margin-bottom: 15px;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.main-img-container {
+  background: url('main-img.jpg') fixed no-repeat;
+  background-position: center;
+  background-size: 100%;
+  height: 600px;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  padding: 0;
 }
 
 .header{
-  display: flex;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  height: 55px;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.1);
+}
+
+.header-container {
+  width: 80%;
+  margin: 0 auto;
 }
 
 .member {
-  display: flex;
-  /* justify-content: flex-end; */
+  margin: 0;
+  float: right;
 }
 
-.logo__real {
-  width:100px;
-  height:100px;
+.member li {
+  display: inline-block;
+  list-style-type: none;
+  height: 55px;
+  padding: 0 25px;
+}
+
+.member li:hover {
+  background-color: #e9e9e9;
+  transition: background-color .5s;
+}
+
+.member li p {
+  padding: 4px 0;
+}
+
+.logo {
+  margin: 14px 0;
+  display: inline-block;
+  font-size: 25px;
+  letter-spacing: 6px;
 }
