--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ h2 {
   letter-spacing: 1px;
 }
 
+hr {
+  width: 40%;
+  margin: 45px auto;
+  /*border-top: solid 1px #30B08F;*/
+}
+
 .container {
   margin: 0;
   padding: 0;
@@ -41,7 +47,6 @@ h2 {
   height: 600px;
   margin: 0;
   padding: 0;
-  margin-bottom: 30px;
   overflow-x: hidden;
 }
 
@@ -75,6 +80,7 @@ h2 {
 .slider-content h1 {
   color: white;
   font-size: 32px;
+  text-transform: uppercase;
 }
 
 .slider-content p {
@@ -87,7 +93,7 @@ h2 {
   background-color: #30B08F;
   padding: 5px 45px;
   border: none;
-  border-radius: 5px;
+  
   cursor: pointer;
   margin: 20px 0;
 }
@@ -134,7 +140,7 @@ h2 {
 .nav li:hover {
   color: #30B08F;
   border-bottom: solid 4px #30B08F;
-  transition: color .5s;
+  transition: color .3s;
 }
 
 .nav li p {
@@ -142,29 +148,68 @@ h2 {
 }
 
 .logo {
-  margin: 14px 0;
+  margin: 16px 0;
   display: inline-block;
   font-size: 23px;
 }
 
+.section-one {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.section-one p {
+  padding: 40px;
+  padding-bottom: 20px;
+}
+
+.section-one h2 {
+  text-align: center;
+}
+
+.section-one button {
+  border: 0;
+  background-color: #f44952;
+  color: white;
+  margin: 5px;
+  padding: 5px 10px;
+}
+
+.section-one button p {
+  padding: 0;
+  line-height: 0;
+  font-size: 15px;
+}
+
+.main-img-small {
+  width: 350px;
+  float: left;
+  padding: 40px;
+}
+
+.instruction p {
+  display: inline-block;
+}
+
 .header-img-content {
   width: 60%;
-  padding-top: 200px;
+  padding-top: 225px;
   margin: auto;
   text-align: center;
 }
 
 .header-img-content h1 {
   color: white;
-  font-size: 35px;
+  font-size: 34px;
+  text-transform: uppercase;
 }
 
-
 .about-header-img {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url('main-img.jpg') no-repeat center center fixed; 
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('about-img.jpg') no-repeat fixed; 
   background-size: 100%;
   width: 100%;
-  height: 400px;
+  height: 450px;
   margin: 0;
   padding: 0;
 }
@@ -176,8 +221,14 @@ h2 {
   padding: 45px 0;
 }
 
-.mission__statement--text {
+.mission__statement {
   width: 80%;
+  margin: 0 auto;
+}
+
+.mission__statement--text {
+  width: 780px;
+  text-align: left;
   margin: 0 auto;
 }
 
@@ -194,11 +245,98 @@ h2 {
 }
 
 .whyCreated p {
-  text-align: center;
+  width: 780px;
+  font-size: 15px;
+  text-align: left;
+  margin: 0 auto;
 }
 
 .whyCreated h1 {
   margin: 38px 0;
   font-weight: normal;
-  font-size: 22px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.contact-form-wrapper {
+  position: fixed;
+  width: auto;
+  height: auto;
+  bottom: 0;
+  right: 10px;
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.1);
+  z-index: 2;
+}
+
+.contact-form-top {
+  background-color: #333;
+  color: #e8e8e8;
+  padding: 8px 15px;
+  width: 300px;
+  border-radius: 8px 8px 0 0;
+  cursor: pointer;
+}
+
+.contact-form-top p {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  display: inline-block;
+}
+
+#contact-open {
+  float: right;
+  font-size: 19px;
+}
+
+#contact-close {
+  float: right;
+  font-size: 19px;
+  display: none;
+}
+
+.contact-form-content {
+  width: 300px;
+  background-color: white;
+  padding: 15px;
+  display: none;
+}
+
+.contact-form-content p {
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+}
+
+.contact-form-content input {
+  width: 100%;
+  height: 30px;
+  font-size: 14px;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 5px;
+  margin: 5px 0;
+}
+
+.contact-form-content textarea {
+  width: 100%;
+  height: 200px;
+  font-size: 14px;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 5px;
+  margin: 5px 0;
+}
+
+#contact-submit {
+  background-color: #333;
+  border: solid 1px #333;
+  color: #e8e8e8;
+  border-radius: 3px;
 }
