--- a/style.css
+++ b/style.css
@@ -70,6 +70,17 @@ hr {
   padding: 0;
 }
 
+.slider3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('main-img2.jpg') no-repeat fixed; 
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  margin-top: -600px;
+  margin-left: 100%;
+  padding: 0;
+}
+
 .slider-content {
   width: 60%;
   padding-top: 250px;
