--- a/style.css
+++ b/style.css
@@ -44,14 +44,14 @@ hr {
 
 .slider-wrapper {
   width: 100%;
-  height: 600px;
+  height: 650px;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
 
 .slider1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url('main-img.jpg') no-repeat fixed; 
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('main-img.jpg') no-repeat fixed; 
   background-size: 100%;
   width: 100%;
   height: 100%;
@@ -65,7 +65,7 @@ hr {
   width: 100%;
   height: 100%;
   margin: 0;
-  margin-top: -600px;
+  margin-top: -650px;
   margin-left: 100%;
   padding: 0;
 }
@@ -80,7 +80,7 @@ hr {
 .slider-content h1 {
   color: white;
   font-size: 32px;
-  text-transform: uppercase;
+
 }
 
 .slider-content p {
@@ -90,7 +90,7 @@ hr {
 
 .slider-content button {
   color: white;
-  background-color: #30B08F;
+  background-color: #FD8B55;
   padding: 5px 45px;
   border: none;
   
@@ -103,24 +103,24 @@ hr {
 }
 
 .wrapper {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   padding: 30px 0;
 }
 
 .top-nav-wrapper {
   position: fixed;
-  background-color: white;
+  
   width: 100%;
   height: 55px;
   top: 0;
   z-index: 1;
-  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.1);
+  
 }
 
 .top-nav {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -135,26 +135,31 @@ hr {
   height: 51px;
   padding: 0 10px;
   margin: 0 15px;
+  color: white;
 }
 
 .nav li:hover {
-  color: #30B08F;
-  border-bottom: solid 4px #30B08F;
+  color: #FD8B55;
+  /*border-bottom: solid 4px #FD8B55;*/
   transition: color .3s;
 }
 
 .nav li p {
-  padding: 2px 0;
+  padding: 7px 0;
 }
 
 .logo {
-  margin: 16px 0;
+  margin: 21px 0;
   display: inline-block;
   font-size: 23px;
 }
 
+.logo a {
+  color: white;
+}
+
 .section-one {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
   padding: 20px 0;
 }
@@ -172,8 +177,8 @@ hr {
   border: 0;
   background-color: #f44952;
   color: white;
-  margin: 5px;
-  padding: 5px 10px;
+  margin: 8px 0;
+  padding: 3px 10px;
 }
 
 .section-one button p {
@@ -185,33 +190,70 @@ hr {
 .main-img-small {
   width: 350px;
   float: left;
-  padding: 40px;
+  margin: 0 40px;
 }
 
 .instruction p {
   display: inline-block;
 }
 
+.instruction-content {
+  width: 950px;
+  margin: 0 auto;
+}
+
 .header-img-content {
   width: 60%;
-  padding-top: 225px;
+  padding-top: 200px;
   margin: auto;
   text-align: center;
+
 }
 
 .header-img-content h1 {
   color: white;
   font-size: 34px;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+
 }
 
 .about-header-img {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('about-img.jpg') no-repeat fixed; 
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('about-img.jpg') no-repeat fixed; 
   background-size: 100%;
   width: 100%;
   height: 450px;
   margin: 0;
   padding: 0;
+}
+
+.about-header-img h1 {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 1px 6px;
+  display: inline-block;
+}
+
+.career-header-img {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url('career-img.jpg') no-repeat fixed; 
+  background-size: 100%;
+  width: 100%;
+  height: 450px;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.career-header-img h1 {
+  letter-spacing: 2px;
+}
+
+.english-header-img {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('english-img.jpg') no-repeat fixed; 
+  background-size: 100%;
+  width: 100%;
+  height: 450px;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
 }
 
 .mission {
@@ -222,7 +264,7 @@ hr {
 }
 
 .mission__statement {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -237,7 +279,7 @@ hr {
 }
 
 .about-wrapper {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
   margin-bottom: 30px;
   padding: 30px 0;
